--- a/kubernetes/dummy-app-deployment.yaml
+++ b/kubernetes/dummy-app-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: dummy-app-deployment
 spec:
-  replicas: 6
+  replicas: 2
   selector:
     matchLabels:
       app: dummy-app
@@ -13,7 +13,7 @@ spec:
         app: dummy-app
     spec:
       containers:
-        - name: dummy-app
-          image: 
-          ports:
-            - containerPort: 3000
+      - name: dummy-app
+        image: gcr.io/hardy-nation-412201/mercury-optikube-dummy-app
+        ports:
+        - containerPort: 3000
