--- a/kubernetes/mercury-deployment.yaml
+++ b/kubernetes/mercury-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mercury-deployment
+  namespace: mercury-namespace
 spec:
   replicas: 3
   selector:
