--- a/kubernetes/php-hpa.yaml
+++ b/kubernetes/php-hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: mercury-hpa
-  namespace: mercury-namespace
+  name: php-hpa
+  namespace: php-namespace
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: mercury-deployment
+    name: php-apache
   minReplicas: 1
   maxReplicas: 15
-  targetCPUUtilizationPercentage: 30
+  targetCPUUtilizationPercentage: 50
