--- a/dummy-apps/legacy-dummy-app/Dockerfile
+++ b/dummy-apps/legacy-dummy-app/Dockerfile
@@ -4,9 +4,9 @@ COPY package*.json ./
 RUN apk add --no-cache --virtual .gyp python3 make g++ && \
     npm install && \
     apk del .gyp
-COPY app.js ./
+COPY dummy-app.js ./
 FROM node:21-alpine
 WORKDIR /app
 COPY --from=builder /app .
 EXPOSE 3000
-CMD ["node", "app.js"]
+CMD ["node", "dummy-app.js"]
